...
                }
            } else {
                sourceItems = shelf.items
            }

            let title = if isStreetwearStory {
                "Streetwear staples from caps to tees"
            } else if isPerformanceSneakerStory {
                "Your performance sneaker edit"
            } else {
                shelf.title
            }
            let subtitle = if isStreetwearStory {
...
